--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
             </title>
             
-          <link rel="stylesheet" href="css1.css" />
+          <link rel="stylesheet" href="CSS1.css" />
         </head>
     <body>
         
