--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>В прошлые выходные я посетил шумное, но интересное мероприятие. В центре нашего города открылась выставка попугаев. Кого туда только не привезли: ары, какаду, жако, неразлучники, волнистые попугаи самых разных расцветок. Рядом с клетками были таблички, рассказывающие про данные виды, их особенности. Нас предупредили, что нельзя кормить птиц и объяснили, как себя вести, чтобы не пугать их. На выставке можно было купить корм для попугаев и книги об уходе за ними.</p>
             <img src="./ara-3601194_1920_0_1608990647.jpg" width="900px"/>
             
-            <a href="/page2.html">ПИНГВИНЫ</a>
+            <a href="https://bilol223.github.io/page2.html">ПИНГВИНЫ</a>
         </main>
         </body>
         </html>
