--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
             ПИНГВИНЫ
         </header>
         <main>
+             <link rel="stylesheet" href="CSS2.css" />
             <p>Материал из Википедии — свободной энциклопедии
 Перейти к навигацииПерейти к поиску
 Императорский пингвин
