--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
             ПИНГВИНЫ
         </header>
         <main>
+            <a href="/">ПАПУГАИ</a>
             <p>Материал из Википедии — свободной энциклопедии
 Перейти к навигацииПерейти к поиску
 Императорский пингвин
